app/assets/tailwind/application.css
/* ... */
@utility button--state-destructive {
  @apply border-red-800 bg-red-700 text-white hover:bg-red-800 focus:ring-red-300 dark:border-red-600 dark:bg-red-600 dark:text-white dark:hover:bg-red-700 dark:focus:ring-red-700;
}

@utility button--state-primary {
  @apply border-primary-800 bg-primary-700 hover:bg-primary-800 focus:ring-primary-300 dark:focus:ring-primary-700 dark:bg-primary-800 dark:border-primary-900 dark:hover:bg-primary-700 text-white dark:text-white;
}

@utility dialog--size {
  @apply relative max-h-full w-full;
}

@utility dialog--size-sm {
  @apply max-w-md;
}

@utility dialog--size-md {
  @apply max-w-xl;
}

@utility dialog--size-lg {
  @apply max-w-3xl;
}

@utility dialog--size-xl {
  @apply max-w-7xl;
}

@utility dialog--title {
  @apply text-xl font-semibold text-slate-900 dark:text-white;
}

@utility dialog--close {
  @apply ml-auto inline-flex items-center rounded-lg bg-transparent p-1.5 text-sm text-slate-400 hover:bg-slate-200 hover:text-slate-900 focus:ring-4 focus:ring-slate-200 dark:hover:bg-slate-600 dark:hover:text-white dark:focus:ring-slate-700;
}

@utility dialog--section {
  @apply p-5;
}

@utility avatar {
  @apply relative inline-flex flex-none items-center justify-center overflow-hidden rounded-md text-slate-800 dark:text-white;
  --tw-avatar-bg-lightness: 35%;
  --tw-avatar-border-lightness: 35%;
  --tw-avatar-bg-alpha: 0.3;

  .dark & {
    --tw-avatar-bg-lightness: 25%;
    --tw-avatar-border-lightness: 90%;
    --tw-avatar-bg-alpha: 0.4;
  }
}

@utility dark {
  & .avatar {
    --tw-avatar-bg-lightness: 25%;
    --tw-avatar-border-lightness: 90%;
    --tw-avatar-bg-alpha: 0.4;
  }
}

@utility namespace-tree-container {
  /*GROUPS LIST TREE*/
  & > .namespace-list-tree > .namespace-entry.has-children:first-child {
    border-top: 0;
  }
}

@utility namespace-list-tree {
  /*GROUPS LIST TREE*/
  .namespace-tree-container > & > .namespace-entry.has-children:first-child {
    border-top: 0;
  }

  & .folder-toggle-wrap {
    font-size: 0;
    flex-shrink: 0;
  }

  & .folder-toggle-wrap span {
    font-size: 12px;
  }

  & .item-type-icon {
    margin-top: 2px;
    width: 20px;
  }

  & > .namespace-entry:not(.has-children) .folder-caret {
    opacity: 0;
  }

  & & {
    margin-bottom: 0;
    margin-left: 30px;
    position: relative;
  }

  & &::before {
    content: "";
    display: block;
    width: 0;
    position: absolute;
    top: 5px;
    bottom: 0;
    left: -16px;
    @apply border-l-2 border-slate-200;
  }

  .dark & &::before {
    @apply border-slate-600;
  }

  & & .namespace-entry {
    position: relative;
  }

  & & .namespace-entry::before {
    content: "";
    display: block;
    width: 10px;
    height: 0;
    position: absolute;
    top: 30px;
    left: -16px;
    @apply border-t-2 border-slate-200;
  }

  .dark & & .namespace-entry::before {
    @apply border-slate-600;
  }

  & & .namespace-entry:last-child::before {
    height: auto;
    top: 30px;
    bottom: 0;
    @apply bg-white;
  }

  .dark & & .namespace-entry:last-child::before {
    @apply bg-slate-800;
  }

  & & .namespace-entry.being-removed {
    opacity: 0.5;
  }

  & .namespace-entry {
    padding: 0;
  }

  & .namespace-entry.has-children {
    border-top: 0;
  }

  & .namespace-entry:first-child {
    @apply border-t border-slate-200;
  }

  .dark & .namespace-entry:first-child {
    @apply border-slate-600;
  }

  & .namespace-entry.has-children > .namespace-entry-contents:hover {
    @apply cursor-pointer border-slate-50 bg-slate-50;
  }

  .dark & .namespace-entry.has-children > .namespace-entry-contents:hover {
    @apply border-slate-600 bg-slate-600;
  }

  & .namespace-entry-contents .namespace-text-container {
    min-width: 0;
  }

  & .namespace-entry-contents .namespace-text {
    min-width: 0;
  }

  & .namespace-entry-contents .namespace-text {
    flex-basis: 100%;
  }

  & .namespace-entry-contents .avatar-container {
    flex-shrink: 0;
  }

  & .namespace-entry-contents .avatar-container > a {
    width: 100%;
    text-decoration: none;
  }

  & .namespace-entry-contents .title {
    @apply text-base font-medium text-slate-900 dark:text-white;
  }

  & .namespace-entry-contents.has-more-items {
    display: block;
    padding: 20px 10px;
  }

  & .namespace-entry-contents .description p {
    max-width: 100%;
    @apply text-sm text-slate-700 dark:text-slate-400;
  }

  & .namespace-entry-contents .stats {
    position: relative;
    line-height: normal;
    text-align: right;
    flex-shrink: 0;
  }

  & .namespace-entry-contents .stats > span {
    display: inline-flex;
    align-items: center;
    height: 16px;
    min-width: 30px;
  }

  & .namespace-entry-contents .stats .stat-value {
    margin: 2px 0 0 5px;
  }
}
/* ... */

